--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             <div class="announcement"> New Collection Dropping This Friday! Use Code "METT10" for 10% Off Your First Order!</div>
             <div class="announcement"> "Beauty begins the moment you decide to be yourself." - Moselyn Junius</div>
             <div class="announcement"> Free Shipping on Orders Over $150!</div>
-            <div class="announcement"> "Fashion is architecture: it is a matter of proportions." - Coco Chanel</div>
+            <div class="announcement"> "Fashion is architecture: it is a matter of proportions." - Moselyn Junius</div>
             <div class="announcement"> Trending: METT Signature Blazers Selling Fast!</div>
             <div class="announcement"> "Dress shabbily and they remember the dress; dress impeccably and they remember the woman." - Coco Chanel</div>
             <div class="announcement"> Special Sale: Up to 30% Off Selected Items!</div>
